20191229_kubernetes_external_traffic/clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: clusterip
spec:
  selector:
    app: webapplication1
  ports:
  - port: 1234 # this is kubernetes port
    targetPort: 80 # this is pod port

# to access application
# kubectl proxy (or kubectl proxy --port=#)
# http://localhost:#/api/v1/namespaces/default/services/clusterip:1234/proxy/
