20191229_kubernetes_external_traffic/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeport
spec:
  selector:
    app: webapplication1
  type: NodePort
  ports:
  - port: 10 # kubernetes port, useless in this case (but still required)
    targetPort: 80 # pod port
    nodePort: 30080 # node port
